# fourpiview

./: CMakeLists.txt  Canvas.cpp  Canvas.hpp  Gallery.cpp  Gallery.hpp  ImageFinder.cpp  ImageFinder.hpp  MainWin.cpp  MainWin.hpp  Utils.cpp  Utils.hpp  main.cpp  resources.qrc
android/: AndroidManifest.xml
